Added a 'card' component (incomplete), which displays one of a set of components at a time.

--- a/branches/munin_integration/munin/Munin.vcproj
+++ b/branches/munin_integration/munin/Munin.vcproj
@@ -190,6 +190,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\card.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\component.hpp"
 				>
 			</File>
