--- a/branches/munin_integration/munin/Munin.vcproj
+++ b/branches/munin_integration/munin/Munin.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;.."
+				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT)"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_SCL_SECURE_NO_WARNINGS;_WIN32_WINNT=0x0501"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -103,7 +103,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories=".;.."
+				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT)"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_SCL_SECURE_NO_WARNINGS;_WIN32_WINNT=0x0501"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -152,10 +152,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\frame.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\text_area.cpp"
 				>
 			</File>
@@ -194,6 +190,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\compass_layout.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\component.hpp"
 				>
 			</File>
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\grid_layout.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\layout.hpp"
 				>
 			</File>
@@ -221,6 +225,14 @@
 				RelativePath=".\types.hpp"
 				>
 			</File>
+			<Filter
+				Name="Text"
+				>
+				<File
+					RelativePath=".\text\document.hpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -252,6 +264,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ansi\frame.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ansi\protocol.cpp"
 				>
 			</File>
@@ -267,6 +283,22 @@
 				RelativePath=".\ansi\window.hpp"
 				>
 			</File>
+			<Filter
+				Name="Text Header Files"
+				>
+				<File
+					RelativePath=".\ansi\text\default_singleline_document.hpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Text Source Files"
+				>
+				<File
+					RelativePath=".\ansi\text\default_singleline_document.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Ansi Source Files"
@@ -285,6 +317,10 @@
 			</File>
 			<File
 				RelativePath=".\ansi\basic_container.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ansi\frame.cpp"
 				>
 			</File>
 		</Filter>
