Implemented some of the basis of the abstract Document type.  Implemented a composite_component<> template, which can wrap a component that is designed by mixing several pre-existing components onto a container in a component without exposing the container parts.

--- a/branches/munin_integration/munin/Munin.vcproj
+++ b/branches/munin_integration/munin/Munin.vcproj
@@ -198,6 +198,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\composite_component.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\container.hpp"
 				>
 			</File>
