--- a/branches/munin_integration/munin/Munin.vcproj
+++ b/branches/munin_integration/munin/Munin.vcproj
@@ -268,6 +268,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ansi\edit.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ansi\frame.hpp"
 				>
 			</File>
@@ -321,6 +325,10 @@
 			</File>
 			<File
 				RelativePath=".\ansi\basic_container.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ansi\edit.cpp"
 				>
 			</File>
 			<File
