Created an image component that displays fixed text.  Created an aligned layout for left/centre/right horizontal and top/centre/bottom vertical aligning of components. Completed the compass layout for laying components out according to basic compass directions. Demonstrated complex layouts in the UI.  Fixed a bug in the slicing algorithm.  Framed Components can now set the focussed/unfocussed border pen attributes.

--- a/branches/munin_integration/makefile
+++ b/branches/munin_integration/makefile
@@ -41,6 +41,7 @@ MUNIN_NAMES       = algorithm \
                     ansi/edit \
                     ansi/frame \
                     ansi/framed_component \
+                    ansi/image \
                     ansi/protocol \
                     ansi/text/default_multiline_document \
                     ansi/text/default_singleline_document \
