--- a/branches/munin_integration/makefile
+++ b/branches/munin_integration/makefile
@@ -51,7 +51,7 @@ MUNIN_NAMES       = algorithm \
 MUNIN_O_FILES     = $(MUNIN_NAMES:%=munin/%.o)
 MUNIN_LIB         = libmunin.a
 
-HUGIN_NAMES       = user_interface
+HUGIN_NAMES       = user_interface wholist
 HUGIN_O_FILES     = $(HUGIN_NAMES:%=hugin/%.o)
 HUGIN_LIB         = libhugin.a
 
