--- a/branches/munin_integration/test/test.vcproj
+++ b/branches/munin_integration/test/test.vcproj
@@ -207,6 +207,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\munin_frame_fixture.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\munin_layout_fixture.cpp"
 				>
 			</File>
@@ -342,6 +346,10 @@
 			</File>
 			<File
 				RelativePath=".\munin_container_fixture.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\munin_frame_fixture.hpp"
 				>
 			</File>
 			<File
