Implemented #22 - a basic help system (showcasing dynamic insertion in the GUI) is implemented. Fixed #56 - resizing text areas now leaves as much visible as possible.

--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -166,15 +166,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\aligned_layout.hpp"
-				>
-			</File>
-			<File
 				RelativePath=".\basic_component.hpp"
 				>
 			</File>
 			<File
 				RelativePath=".\basic_container.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\basic_layout.hpp"
 				>
 			</File>
 			<File
