--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -207,6 +207,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\munin_layout_fixture.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\paradice_test.cpp"
 				>
 			</File>
@@ -338,6 +342,10 @@
 			</File>
 			<File
 				RelativePath=".\munin_container_fixture.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\munin_layout_fixture.hpp"
 				>
 			</File>
 			<File
