--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -152,7 +152,87 @@
 				>
 			</File>
 			<File
+				RelativePath=".\aligned_layout.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\attribute.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\basic_component.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\basic_container.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\canvas.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\card.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\compass_layout.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\component.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\composite_component.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\container.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\edit.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\frame.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\framed_component.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\grid_layout.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\image.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\layout.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\solid_frame.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\text_area.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\types.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\vertical_squeeze_layout.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\window.cpp"
 				>
 			</File>
 		</Filter>
@@ -166,15 +246,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\aligned_layout.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\attribute.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\basic_component.hpp"
 				>
 			</File>
 			<File
 				RelativePath=".\basic_container.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\basic_layout.hpp"
 				>
 			</File>
 			<File
@@ -202,11 +286,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\edit.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\frame.hpp"
 				>
 			</File>
 			<File
-				RelativePath=".\graphics_context.hpp"
+				RelativePath=".\framed_component.hpp"
 				>
 			</File>
 			<File
@@ -214,21 +302,33 @@
 				>
 			</File>
 			<File
+				RelativePath=".\image.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\layout.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\solid_frame.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\text_area.hpp"
 				>
 			</File>
 			<File
 				RelativePath=".\types.hpp"
 				>
 			</File>
-			<Filter
-				Name="Text"
+			<File
+				RelativePath=".\vertical_squeeze_layout.hpp"
 				>
-				<File
-					RelativePath=".\text\document.hpp"
-					>
-				</File>
-			</Filter>
+			</File>
+			<File
+				RelativePath=".\window.hpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -240,123 +340,47 @@
 			Name="Ansi Header Files"
 			>
 			<File
-				RelativePath=".\ansi\ansi_canvas.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\ansi_types.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\attribute.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\basic_container.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\container.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\edit.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\frame.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\framed_component.hpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\image.hpp"
-				>
-			</File>
-			<File
 				RelativePath=".\ansi\protocol.hpp"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="Text Source Files"
+			>
 			<File
-				RelativePath=".\ansi\text_area.hpp"
+				RelativePath=".\text\document.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Text Header Files"
+			>
+			<File
+				RelativePath=".\text\default_multiline_document.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\ansi\window.hpp"
+				RelativePath=".\text\default_multiline_document.hpp"
 				>
 			</File>
-			<Filter
-				Name="Text Header Files"
+			<File
+				RelativePath=".\text\default_singleline_document.cpp"
 				>
-				<File
-					RelativePath=".\ansi\text\default_multiline_document.hpp"
-					>
-				</File>
-				<File
-					RelativePath=".\ansi\text\default_singleline_document.hpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="Text Source Files"
+			</File>
+			<File
+				RelativePath=".\text\default_singleline_document.hpp"
 				>
-				<File
-					RelativePath=".\ansi\text\default_multiline_document.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\ansi\text\default_singleline_document.cpp"
-					>
-				</File>
-			</Filter>
+			</File>
+			<File
+				RelativePath=".\text\document.hpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Ansi Source Files"
 			>
 			<File
-				RelativePath=".\ansi\ansi_canvas.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\ansi_types.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\attribute.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\basic_container.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\edit.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\frame.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\framed_component.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\image.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\ansi\protocol.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\text_area.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ansi\window.cpp"
 				>
 			</File>
 		</Filter>
