--- a/trunk/paradice/Paradice.vcproj
+++ b/trunk/paradice/Paradice.vcproj
@@ -151,6 +151,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\account.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\character.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\client.cpp"
 				>
 			</File>
@@ -204,6 +212,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\account.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\character.hpp"
+				>
+			</File>
 			<File
 				RelativePath=".\client.hpp"
 				>
