Added a clickable close button to the help window.  Added hashing to player passwords (Paradice now requires Crypto++).  Added a method for users to change their passwords.  Added a method for admins to change their passwords.

--- a/hugin/Hugin.vcproj
+++ b/hugin/Hugin.vcproj
@@ -172,6 +172,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\password_change_screen.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\user_interface.cpp"
 				>
 			</File>
@@ -207,6 +211,10 @@
 			</File>
 			<File
 				RelativePath=".\main_screen.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\password_change_screen.hpp"
 				>
 			</File>
 			<File
