--- a/paradice/Paradice.vcproj
+++ b/paradice/Paradice.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT)"
+				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT);$(CRYPTOPP_ROOT)"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_WIN32_WINNT=0x0501;_SCL_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT)"
+				AdditionalIncludeDirectories=".;..;$(BOOST_INCLUDE_ROOT);$(CRYPTOPP_ROOT)"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_WIN32_WINNT=0x0501;_SCL_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -155,6 +155,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\admin.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\character.cpp"
 				>
 			</File>
@@ -172,6 +176,10 @@
 			</File>
 			<File
 				RelativePath=".\connection.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\cryptography.cpp"
 				>
 			</File>
 			<File
@@ -213,6 +221,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\admin.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\character.hpp"
 				>
 			</File>
@@ -238,6 +250,10 @@
 			</File>
 			<File
 				RelativePath=".\context.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\cryptography.hpp"
 				>
 			</File>
 			<File
