Corrected an issue where navigating the command prompt using up or down when there was no history to navigate would crash the server.  Added horizontal and vertical scroll bar components.  Added a #define for the cryptography method used, should someone not want a dependency on Crypto++.

--- a/munin/Munin.vcproj
+++ b/munin/Munin.vcproj
@@ -212,6 +212,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\horizontal_scroll_bar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\horizontal_squeeze_layout.cpp"
 				>
 			</File>
@@ -241,6 +245,10 @@
 			</File>
 			<File
 				RelativePath=".\types.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\vertical_scroll_bar.cpp"
 				>
 			</File>
 			<File
@@ -322,6 +330,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\horizontal_scroll_bar.hpp"
+				>
+			</File>
+			<File
 				RelativePath=".\horizontal_squeeze_layout.hpp"
 				>
 			</File>
@@ -351,6 +363,10 @@
 			</File>
 			<File
 				RelativePath=".\types.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\vertical_scroll_bar.hpp"
 				>
 			</File>
 			<File
